--- a/angular.json
+++ b/angular.json
@@ -10,38 +10,43 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
-        "build": {
-          "builder": "@angular/build:application",
-          "options": {
-            "browser": "src/main.ts",
-            "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ]
-          },
-          "configurations": {
-           "production": {
-                "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "5MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "5mb"
-                }
-              ],
-              "outputHashing": "all",
-              "serviceWorker": "false"
-            },
+       "build": {
+  "builder": "@angular/build:application",
+  "options": {
+    "browser": "src/main.ts",
+    "tsConfig": "tsconfig.app.json",
+    "assets": [
+      {
+        "glob": "**/*",
+        "input": "public"
+      }
+    ],
+    "styles": [
+      "src/styles.css"
+    ],
+    "allowedCommonJsDependencies": [
+      "quill",
+      "quill-delta"
+    ]
+  },
+  "configurations": {
+    "production": {
+      "budgets": [
+        {
+          "type": "initial",
+          "maximumWarning": "500kB",
+          "maximumError": "5MB"
+        },
+        {
+          "type": "anyComponentStyle",
+          "maximumWarning": "2kB",
+          "maximumError": "5MB"
+        }
+      ],
+      "outputHashing": "all",
+      "serviceWorker": false
+    }
+,
             "development": {
               "optimization": false,
               "extractLicenses": false,
