--- a/angular.json
+++ b/angular.json
@@ -15,12 +15,23 @@
   "options": {
     "browser": "src/main.ts",
     "tsConfig": "tsconfig.app.json",
+    
     "assets": [
-      {
-        "glob": "**/*",
-        "input": "public"
-      }
-    ],
+        {
+          "glob": "**/*",
+          "input": "public"
+        },
+        {
+          "glob": "manifest.webmanifest",
+          "input": "src",
+          "output": "/"
+        },
+        {
+          "glob": "**/*",
+          "input": "src/assets",
+          "output": "/assets"
+        }
+      ],
     "styles": [
       "src/styles.css"
     ],
@@ -44,7 +55,7 @@
         }
       ],
       "outputHashing": "all",
-      "serviceWorker": false
+      "serviceWorker": "ngsw-config.json"
     }
 ,
             "development": {
@@ -74,6 +85,7 @@
           "builder": "@angular/build:karma",
           "options": {
             "tsConfig": "tsconfig.spec.json",
+            
             "assets": [
               {
                 "glob": "**/*",
