--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
+    "@angular/pwa": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@angular/service-worker": "^20.3.4",
     "@primeuix/themes": "^1.2.5",
     "@tailwindcss/postcss": "^4.1.14",
     "chart.js": "^4.5.1",
