--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -8,11 +8,13 @@
       "resources": {
         "files": [
           "/favicon.png",
-          "/index.csr.html",
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
           "/*.js"
+        ],
+        "urls": [
+          "/"
         ]
       }
     },
@@ -22,9 +24,12 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/assets/**",
+          "/icons/**",
+          "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
       }
     }
-  ]
+  ],
+  "dataGroups": []
 }
