--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -13,9 +13,7 @@
           "/*.css",
           "/*.js"
         ],
-        "urls": [
-          "/"
-        ]
+        "urls": ["/"]
       }
     },
     {
@@ -31,5 +29,18 @@
       }
     }
   ],
-  "dataGroups": []
+  "dataGroups": [
+    {
+      "name": "api-requests",
+      "urls": [
+        "https://your-backend-domain.com/api/**"
+      ],
+      "cacheConfig": {
+        "maxSize": 0,
+        "maxAge": "0u",
+        "timeout": "10s",
+        "strategy": "freshness"
+      }
+    }
+  ]
 }
