--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -6,13 +6,15 @@
       "name": "app",
       "installMode": "prefetch",
       "resources": {
-      "files": [
+        "files": [
           "/favicon.ico",
-          "/index.csr.html",
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
           "/*.js"
+        ],
+        "urls": [
+          "/"
         ]
       }
     },
@@ -22,10 +24,11 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/assets/**",
+          "/*.(eot|svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
       }
     }
-  ]
-  
+  ],
+  "dataGroups": []
 }
