undo some non sence

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -6,15 +6,13 @@
       "name": "app",
       "installMode": "prefetch",
       "resources": {
-        "files": [
+      "files": [
           "/favicon.ico",
+          "/index.csr.html",
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
           "/*.js"
-        ],
-        "urls": [
-          "/"
         ]
       }
     },
@@ -24,11 +22,10 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
-          "/assets/**",
-          "/*.(eot|svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
+          "/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
       }
     }
-  ],
-  "dataGroups": []
+  ]
+  
 }
