--- a/angular.json
+++ b/angular.json
@@ -76,12 +76,15 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+          "assets": [
+  "src/favicon.ico",
+  "src/assets",
+  {
+    "glob": "manifest.webmanifest",
+    "input": "src",
+    "output": "/"
+  }
+],
             "styles": [
               "src/styles.css"
             ]
